[package]
name = "hello-http"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
eyre = "0.6.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
