[package]
name = "hello-http"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
axum = "0.8.4"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
